--- a/pom.xml
+++ b/pom.xml
@@ -207,6 +207,12 @@
             <version>2.0.5</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.7.3</version>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
